--- a/Views/Album/Index.cshtml
+++ b/Views/Album/Index.cshtml
@@ -4,38 +4,40 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<a class="btn btn-success mt-5 m-2"  asp-controller="Album" asp-action="Create">Create new album</a>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Title)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.About)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.About)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="row">
+    @foreach (var album in Model)
+    {
+        <div class="card text-white  m-2" style="max-width: 25rem;">
+            <div class="card-header bg-primary">@album.Title</div>
+            <div class="card-body">
+                <h5 class="card-title" style="color:black">Songs Count: @album.Songs?.Count()</h5>
+                <div style="display:flex; justify-content:space-evenly">
+                    @if (album.Songs.Count == 0)
+                    {
+                        <a class="btn btn-outline-primary disabled mr-2" asp-area="">View Songs</a>
+                    }
+                    else
+                    {
+                        <a class="btn btn-outline-primary mr-2" asp-area="">View Songs</a>
+                    }
+                    <a class="btn btn-info mr-2" asp-area="" asp-controller="Album" asp-action="Edit" asp-route-id="@album.Id">Edit</a>
+                    <a class="btn btn-danger" asp-area="" asp-controller="Album" asp-action="Delete" asp-route-id="@album.Id">Delete</a>
+
+                </div>
+                
+
+
+
+
+      
+
+            </div>
+        </div>
+
+    }
+</div>
+
+
+
