--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -12,6 +12,13 @@ a {
   color: #0366d6;
 }
 
+/* Wrapping element */
+/* Set some basic padding to keep content from hitting the edges */
+.body-content {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
 .btn-primary {
   color: #fff;
   background-color: #1b6ec2;
