--- a/Views/Album/Create.cshtml
+++ b/Views/Album/Create.cshtml
@@ -4,34 +4,32 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>Album</h4>
-<hr />
-<div class="row">
+<div class="row orderForm">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" asp-controller="Album" method="post" class="form-horizontal" role="form">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <h3 class="col-md-offset-2 p-lg-4">Create new album</h3>
             <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
+                <label asp-for="Title" class="col-md-2 control-label"></label>
+                <div class="col-md-6">
+                    <input asp-for="Title" class="form-control" placeholder="Enter album's title" style="width:500px"/>
+                    <span asp-validation-for="Title" class="text-danger"></span>
+                </div>
             </div>
+
             <div class="form-group">
-                <label asp-for="About" class="control-label"></label>
-                <input asp-for="About" class="form-control" />
-                <span asp-validation-for="About" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <div class="btn-group col-md-offset-2 col-md-6">
+                    <input class="btn btn-success" type="submit" value="Create" />
+                    <input class="btn btn-secondary" type="submit" value="Return" asp-controller="Album" asp-action="Index" />
+
+                </div>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
