--- a/Views/Album/Create.cshtml
+++ b/Views/Album/Create.cshtml
@@ -5,15 +5,16 @@
 }
 
 <div class="row orderForm">
-    <div class="col-md-4">
-        <form asp-action="Create" asp-controller="Album" method="post" class="form-horizontal" role="form">
+    <div class="col-md-6">
+        <h3 class="p-lg-4">Create new album</h3>
+        <form asp-action="Create" asp-controller="Album" method="post" class="form-horizontal" role="form" style='width:550px'>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             @Html.HiddenFor(x => x.Referer)
-            <h3 class="col-md-offset-2 p-lg-4">Create new album</h3>
+
             <div class="form-group">
                 <label asp-for="Album.Title" class="col-md-2 control-label"></label>
                 <div class="col-md-6">
-                    <input asp-for="Album.Title" class="form-control" placeholder="Enter album's title" style="width:500px" />
+                    <input asp-for="Album.Title" class="form-control" placeholder="Enter album's title" style="width:100%;min-width:0;" />
                     <span asp-validation-for="Album.Title" class="text-danger"></span>
                 </div>
             </div>
