Reformat Song-Detail Page to Show Artists and Album

--- a/Views/Song/Details.cshtml
+++ b/Views/Song/Details.cshtml
@@ -10,17 +10,30 @@
     <h4>Song</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Title)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Duration)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Duration)
+        </dd>
+        <dt class="col-sm-2">
+            Album
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Album.Title)
+        </dd>
+
+        <dt class="col-sm-2">
+            Artist
+        </dt>
+        <dd class="col-sm-10">
+            @Html.Raw(string.Join(" , ", Model.ArtistSongs.Select(s => string.Format("<span>{0}</span>", s.Artist.Name))))
         </dd>
     </dl>
 </div>
