--- a/Views/Artist/Create.cshtml
+++ b/Views/Artist/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model PlaylistApp.Entities.Artist
+﻿@model PlaylistApp.Models.ViewModels.ArtistViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -12,10 +12,11 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            @Html.HiddenFor(x => x.Referer)
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <label asp-for="@Model.Artist.Name" class="control-label"></label>
+                <input asp-for="@Model.Artist.Name" class="form-control" />
+                <span asp-validation-for="@Model.Artist.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
